fix quote spacing

--- a/app/assets/stylesheets/application/objects/quote-card.scss
+++ b/app/assets/stylesheets/application/objects/quote-card.scss
@@ -9,7 +9,8 @@
   box-shadow: 0 2px 4px rgba(34, 34, 34, 0.12);
   position: relative;
   overflow: hidden;
-  min-height: 120px;
+  min-width: 400px;
+  min-height: 160px;
   background: #eee;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
